// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryPromo should render correctly 1`] = `
.c1 {
  display: inline-block;
  vertical-align: top;
  max-width: 33.33%;
  position: relative;
}

.c3 {
  display: inline-block;
  vertical-align: top;
  padding: 0 0.5rem;
  max-width: 66.67%;
}

.c2 {
  position: absolute;
  bottom: 0;
}

.c4 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #3F3F42;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  margin: 0;
  padding-bottom: 0.5rem;
  font-weight: 700;
}

.c5 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  margin: 0;
  padding-bottom: 0.5rem;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    max-width: 33.33%;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
    max-width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c3 {
    max-width: 66.67%;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
    max-width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c5 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Alt text"
      src="https://foobar.com/image.png"
    />
    <div
      className="c2"
    />
  </div>
  <div
    className="c3"
  >
    <h3
      className="c4"
    >
      The headline of the promo
    </h3>
    <p
      className="c5"
    >
      The summary of the promo
    </p>
    <time>
      12 March 2019
    </time>
  </div>
</div>
`;

exports[`StoryPromo with Media Indicator should render correctly 1`] = `
.c7 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c3 {
  padding: 0.5rem 0.25rem;
  background-color: #FFFFFF;
  display: inline-block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  color: #222222;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  vertical-align: middle;
  margin: 0 0.25rem;
  fill: #222222;
}

.c6 {
  vertical-align: middle;
  margin: 0 0.25rem;
}

.c1 {
  display: inline-block;
  vertical-align: top;
  max-width: 33.33%;
  position: relative;
}

.c8 {
  display: inline-block;
  vertical-align: top;
  padding: 0 0.5rem;
  max-width: 66.67%;
}

.c2 {
  position: absolute;
  bottom: 0;
}

.c9 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #3F3F42;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  margin: 0;
  padding-bottom: 0.5rem;
  font-weight: 700;
}

.c10 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  margin: 0;
  padding-bottom: 0.5rem;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    max-width: 33.33%;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
    max-width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c8 {
    max-width: 66.67%;
  }
}

@supports (display:grid) {
  .c8 {
    display: block;
    max-width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c9 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c10 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Alt text"
      src="https://foobar.com/image.png"
    />
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            height="12px"
            viewBox="0 0 32 32"
            width="12px"
          >
            <polygon
              points="3,32 29,16 3,0"
            />
          </svg>
          <time
            className="c6"
            dateTime="PT2M15S"
          >
            <span
              className="c7"
            >
              Video 2 minutes 15 seconds
            </span>
            <span
              aria-hidden="true"
            >
              2:15
            </span>
          </time>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c8"
  >
    <h3
      className="c9"
    >
      The headline of the promo
    </h3>
    <p
      className="c10"
    >
      The summary of the promo
    </p>
    <time>
      12 March 2019
    </time>
  </div>
</div>
`;
